# whisper.rn

./: .eslintignore  .eslintrc  .gitignore  .gitmodules  .npmignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  extendMetroConfig.js  lefthook.yml  package.json  tsconfig.json  whisper-rn.podspec  whisper.rn-0.4.0-rc.8.tgz
.agents/skills/upgrade-react-native/: SKILL.md
.claude/agents/: react-native-upgrader.md
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  ci.yml  stale.yml
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml  CMakeLists.txt  RNWhisperJSI.cpp  RNWhisperJSI.h  jni-utils.h  jni.cpp
android/src/main/java/com/rnwhisper/: AudioUtils.java  Downloader.java  JSCallInvokerResolver.java  RNWhisper.java  RNWhisperModule.java  RNWhisperPackage.java  SimpleFileDownloader.java  WavWriter.java  WhisperContext.java  WhisperVadContext.java
android/src/main/jni/whisper/: Whisper.mk  jni.c  jni.cpp
android/src/main/rnwhisper/: CMakeLists.txt
cpp/: .gitignore  README.md  ggml-aarch64.c  ggml-aarch64.h  ggml-alloc.c  ggml-alloc.h  ggml-backend-impl.h  ggml-backend-meta.cpp  ggml-backend-reg.cpp  ggml-backend-reg.cpp.orig  ggml-backend.c  ggml-backend.cpp  ggml-backend.cpp.orig  ggml-backend.cpp.rej  ggml-backend.h  ggml-common.h  ggml-cpp.h  ggml-cpu-aarch64.c  ggml-cpu-aarch64.cpp  ggml-cpu-aarch64.h  ggml-cpu-impl.h  ggml-cpu-quants.c  ggml-cpu-quants.h  ggml-cpu-traits.cpp  ggml-cpu.c  ggml-cpu.cpp  ggml-cpu.h  ggml-hexagon.h  ggml-impl.h  ggml-metal-impl.h  ggml-metal.h  ggml-metal.m  ggml-metal.m.orig  ggml-opt.cpp  ggml-opt.h  ggml-quants.c  ggml-quants.h  ggml-threading.cpp  ggml-threading.h  ggml.c  (+14 more)
cpp/amx/: amx.cpp  common.h  mmq.cpp
cpp/coreml/: whisper-compat.h  whisper-compat.m  whisper-decoder-impl.m  whisper-encoder-impl.m  whisper-encoder.mm
cpp/ggml-cpu/: arch-fallback.h  binary-ops.cpp  binary-ops.h  common.h  ggml-cpu-impl.h  ggml-cpu.c  ggml-cpu.cpp  ops.cpp  ops.h  quants.c  quants.h  repack.cpp  repack.h  simd-gemm.h  simd-mappings.h  traits.cpp  traits.h  unary-ops.cpp  unary-ops.h  vec.cpp  vec.h
cpp/ggml-cpu/amx/: amx.cpp  amx.h  common.h  mmq.cpp  mmq.h
cpp/ggml-hexagon/: CMakeLists.txt  ggml-hexagon.cpp  htp-utils.c  htp-utils.h
cpp/ggml-hexagon/htp/: CMakeLists.txt  act-ops.c  binary-ops.c  cmake-toolchain.cmake  htp-ctx.h  htp-dma.c  htp-dma.h  htp-msg.h  htp-ops.h  htp_iface.idl  hvx-exp.c  hvx-inverse.c  hvx-sigmoid.c  hvx-utils.c  hvx-utils.h  main.c  matmul-ops.c  ops-utils.h  rope-ops.c  softmax-ops.c  unary-ops.c  worker-pool.c  worker-pool.h
cpp/ggml-metal/: ggml-metal-common.cpp  ggml-metal-common.h  ggml-metal-context.h  ggml-metal-context.m  ggml-metal-device.cpp  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-device.m.orig  ggml-metal-impl.h  ggml-metal-ops.cpp  ggml-metal-ops.h  ggml-metal.cpp  ggml-metal.metal
cpp/jsi/: RNWhisperJSI.cpp  RNWhisperJSI.h  ThreadPool.h
docs/: README.md  TIPS.md  TROUBLESHOOTING.md
docs/API/: README.md
docs/API/classes/: WhisperContext.md  WhisperVadContext.md  index.WhisperContext.md  index.WhisperVadContext.md  realtime_transcription.RealtimeTranscriber.md  realtime_transcription.RingBuffer.md  realtime_transcription.RingBufferVad.md  realtime_transcription.SliceManager.md
docs/API/enums/: AudioSessionCategoryIos.md  AudioSessionCategoryOptionIos.md  AudioSessionModeIos.md  index.AudioSessionCategoryIos.md  index.AudioSessionCategoryOptionIos.md  index.AudioSessionModeIos.md
docs/API/interfaces/: index.TranscribeFileOptions.md  realtime_transcription.AudioSlice.md  realtime_transcription.AudioSliceNoData.md  realtime_transcription.AudioStreamConfig.md  realtime_transcription.AudioStreamData.md  realtime_transcription.AudioStreamInterface.md  realtime_transcription.MemoryUsage.md  realtime_transcription.RealtimeOptions.md  realtime_transcription.RealtimeStatsEvent.md  realtime_transcription.RealtimeTranscribeEvent.md  realtime_transcription.RealtimeTranscriberCallbacks.md  realtime_transcription.RealtimeTranscriberContexts.md  realtime_transcription.RealtimeTranscriberDependencies.md  realtime_transcription.RealtimeVadEvent.md  realtime_transcription.StatsEvent.md  (+3 more)
docs/classes/: WhisperContext.md
example/: .gitignore  app.json  index.js  metro.config.js  package.json  react-native.config.js
example/android/: build.gradle  gradle.properties  gradlew  settings.gradle
example/ios/: .xcode.env.local  File.swift  Podfile
example/patches/: @fugood+react-native-audio-pcm-stream+1.1.4.patch
example/src/: App.js  App.tsx  Bench.tsx  Button.tsx  JSITest.tsx  RealtimeTranscriber.tsx  RealtimeTranscriberDemo.tsx  Transcribe.tsx  TranscribeData.tsx  Vad.tsx  context-opts.ios.js  context-opts.ios.ts  context-opts.ts  util.ts
ios/: CMakeLists.txt  RNWhisper.h  RNWhisper.mm  RNWhisperAudioSessionUtils.h  RNWhisperAudioSessionUtils.m  RNWhisperAudioUtils.h  RNWhisperAudioUtils.m  RNWhisperContext.h  RNWhisperContext.mm  RNWhisperDownloader.h  RNWhisperDownloader.m  RNWhisperJSI.h  RNWhisperJSI.mm  RNWhisperVadContext.h  RNWhisperVadContext.mm  SimpleFileDownloader.h  SimpleFileDownloader.m
ios/RNWhisper.xcodeproj/: project.pbxproj
ios/rnwhisper.xcframework/: Info.plist
jest/: mock.js
scripts/: bootstrap.sh  build-android.sh  build-hexagon-htp.sh  build-ios.sh  docker-build-wrapper.sh  ggml-backend-reg.cpp.patch  ggml-backend.cpp.patch  ggml-cpu-aarch64.c.patch  ggml-metal.m.patch  whisper-encoder.mm.patch  whisper-endocder.mm.patch  whisper.cpp.patch  whisper.h.patch
scripts/patches/: ggml-hexagon.cpp.patch  ggml-metal-device.m.patch  ggml-metal.m.patch  ggml-quants.c.patch  ggml.c.patch  whisper.cpp.patch  whisper.h.patch
src/: AudioSessionIos.ts  NativeRNWhisper.ts  index.ts  index.tsx  jest-mock.ts  jsi.ts  version.json
src/__tests__/: index.test.ts  index.test.tsx
src/realtime-transcription/: RealtimeTranscriber.ts  RingBuffer.ts  RingBufferVad.ts  SliceManager.ts  WavFileWriter.ts  index.ts  types.ts
src/utils/: WavFileReader.ts  WavFileWriter.ts  common.ts
(+50 files in other folders)
